test/data/syntax-errors/no-comma-in-printes.gs
Num x = 5
printes x
